--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  z-index: 1;
 }
 
 .header__logo {
@@ -58,14 +59,14 @@ button {
 }
 
 .about__image {
-  width: 500px;
+  width: 550px;
 }
-   
+
 .about__sun-image {
   width: 100px;
   height: 100px;
-  margin-bottom: 300px;
-}
+  position: absolute;
+} 
 
 .about h1 {
   font-size: 70px;
@@ -191,3 +192,88 @@ footer {
   margin-top: 15px;
 }
 
+@keyframes rotation {
+  0% {
+      transform: rotate(0);
+  }
+
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+.about__sun-image {
+  width: 100px;
+  height: 100px;
+  animation: rotation 10s infinite linear;
+}
+
+
+@media (max-width: 1024px) {
+  .about {
+      padding: 115px 20px;
+  }
+
+  .about h1 {
+      font-size: 36px;
+      line-height: 40px;
+  }
+
+  .about__image {
+      width: 280px;
+  }
+
+  .about__sun-image {
+      width: 75px;
+      height: 75px;
+  }
+}
+
+@media (max-width: 720px) {
+  header {
+      padding: 10px;
+  }
+
+  .header__logo {
+      height: 20px;
+  }
+
+  header a {
+      margin-right: 10px;
+  }
+
+  .about {
+      flex-direction: column-reverse;
+      padding: 50px 10px;
+  }
+
+  .about h1 {
+      font-size: 36px;
+      line-height: 40px;
+  }
+
+  .about__image {
+      width: 280px;
+  }
+
+  .about__sun-image {
+      width: 75px;
+      height: 75px;
+  }
+
+  .form {
+      padding: 50px 10px;
+  }
+
+  .form h1 {
+      font-size: 36px;
+  }
+
+  footer {
+      padding: 50px 10px;
+  }
+
+  .footer__container {
+      flex-direction: column;
+  }
+}
